# agent-voice-bridge

./: README.md  config.yaml.example  pyproject.toml
specs/: architecture.md
src/agent_voice_bridge/: __init__.py  audio.py  cli.py  config.py  gemini_client.py  server.py
tests/: test_audio.py  test_e2e.py
